[RPP] Updated Time Ranges Design
video: http://screencast/cast/NTQ0NDczODIwNjQwMDUxMnw3ODEzMDhhOS05NQ

Bug: 360096144
Change-Id: I297036eb81efbb7d2b7dfc149bc341094a0a589c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5836928
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/overlays/components/timeRangeOverlay.css
+++ b/front_end/panels/timeline/overlays/components/timeRangeOverlay.css
@@ -13,10 +13,15 @@
   height: 100%;
   box-sizing: border-box;
   padding-bottom: 5px;
+  background: linear-gradient(180deg, rgb(255 125 210 / 0%) 0%, rgb(255 125 210 / 15%) 85%); /* stylelint-disable-line plugin/use_theme_colors */
+  border-color: var(--ref-palette-pink55);
+  border-width: 1px;
+  border-style: solid;
+  pointer-events: none;
+  border-bottom-width: 5px;
 }
 
-.label {
-  font-style: italic;
+.range-container {
   text-align: center;
   box-sizing: border-box;
   width: max-content;
@@ -24,6 +29,7 @@
   padding: 0 3px;
   pointer-events: all;
   user-select: none;
+  color: var(--ref-palette-pink55);
 
   &.labelHidden {
     /* Have to use this not display: none so it maintains its width */
@@ -45,8 +51,21 @@
   text-overflow: ellipsis;
   max-height: 40px;
   overflow: hidden;
+  color: var(--ref-palette-pink55);
+  margin-bottom: 3px;
   display: -webkit-box;
   white-space: break-spaces;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+}
+
+.label-text[contenteditable="true"] {
+  outline: none;
+  box-shadow: 0 0 0 1px var(--ref-palette-pink55);
+}
+
+.user-created-icon {
+  position: absolute;
+  left: 4px;
+  bottom: 5px;
 }
