[Freestyler] Update Select element UI
This updates the styler and types of the select element button
and the displayed link

Bug: 364564225
Change-Id: I49230cb5119f07249be4480e72830917c1789d37
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5836920
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -27,6 +27,24 @@
   flex-direction: column;
 }
 
+.select-element {
+  display: flex;
+  gap: var(--sys-size-3);
+  align-items: center;
+
+  .resource-link {
+    padding: var(--sys-size-2) var(--sys-size-4);
+    font: var(--sys-typescale-body4-size);
+    border: var(--sys-size-1) solid var(--sys-color-divider);
+    border-radius: var(--sys-shape-corner-extra-small);
+  }
+
+  .resource-link.not-selected {
+    color: var(--sys-color-state-disabled);
+    border-color: var(--sys-color-neutral-outline);
+  }
+}
+
 .input-form {
   display: flex;
   flex-direction: column;
@@ -39,7 +57,7 @@
 .chat-input-container {
   margin: var(--sys-size-3) 0;
   padding: 0 2px;
-  border-radius: 4px;
+  border-radius: var(--sys-shape-corner-extra-small);
   border: 1px solid var(--sys-color-neutral-outline);
   width: 100%;
   display: flex;
