New first-run experience for console insights
1) Hover button and context menu entry appear even when DevTools
   setting is turned off
2) Opt-in teaser with link to settings
3) Once setting is turned on, insight is immediately generated
4) On subsequent runs, answer is generated immediately
5) In the case of enable setting, don't generate insight, new
   DevTools session -> show consent reminder once

Screencasts:
First-run experience: https://i.imgur.com/gBGlZVw.mp4
When first run happens in a new session:
  https://i.imgur.com/SQDaRSE.mp4

Doc (non-public):
https://docs.google.com/document/d/1iGtygMGqqCUtZsq4SOcOKGGThgthdwzaTy24NCUmLMk
Design (non-public):
https://www.figma.com/design/aYuqExkCn0fbrltL9p85lq/Chrome-privacy-framework-for-Console-insights?node-id=1-63&node-type=CANVAS&m=dev

Bug: b/350668580
Change-Id: I2ddf27e5d0bdf825f7d531246bd2a73123bffd92
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5830610
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -69,7 +69,7 @@
 }
 
 .wrapper {
-  padding: 16px;
+  padding: var(--sys-size-6) var(--sys-size-8);
   background-color: var(--sys-color-cdt-base-container);
   border-radius: 16px;
   /* stylelint-disable-next-line property-no-unknown */
@@ -93,7 +93,8 @@ header {
   font-size: 13px;
   font-style: normal;
   font-weight: 500;
-  height: 14px;
+  margin-bottom: var(--sys-size-6);
+  align-items: center;
 }
 
 header:focus-visible {
@@ -104,10 +105,25 @@ header > .filler {
   flex: 1;
 }
 
+.reminder-container {
+  border-radius: var(--sys-size-5);
+  background-color: var(--sys-color-surface4);
+  padding: var(--sys-size-8);
+  font-weight: var(--ref-typeface-weight-medium);
+}
+
+.reminder-items {
+  display: grid;
+  grid-template-columns: var(--sys-size-8) auto;
+  gap: var(--sys-size-5) var(--sys-size-6);
+  margin-top: var(--sys-size-6);
+  line-height: var(--sys-size-8);
+  font-weight: var(--ref-typeface-weight-regular);
+}
+
 main {
   --override-markdown-view-message-color: var(--sys-color-on-surface);
 
-  margin: 12px 0 0;
   color: var(--sys-color-on-surface);
   font-size: 12px;
   font-style: normal;
@@ -151,6 +167,11 @@ main {
       margin-top: 0.3em;
     }
   }
+}
+
+.opt-in-teaser {
+  display: flex;
+  gap: var(--sys-size-5);
 }
 
 devtools-markdown-view {
@@ -276,9 +297,10 @@ details[open] {
 
 h2 {
   display: block;
-  font-size: inherit;
+  font-size: var(--sys-size-7);
   margin: 0;
-  font-weight: inherit;
+  font-weight: var(--ref-typeface-weight-medium);
+  line-height: var(--sys-size-9);
 }
 
 h2:focus-visible {
@@ -297,4 +319,28 @@ devtools-icon[name="spark"] {
 devtools-icon[name="dog-paw"] {
   width: 16px;
   height: 16px;
+}
+
+.badge {
+  background: linear-gradient(135deg, var(--sys-color-gradient-primary), var(--sys-color-gradient-tertiary));
+  border-radius: var(--sys-size-3);
+  height: var(--sys-size-9);
+
+  devtools-icon {
+    margin: var(--sys-size-2);
+  }
+}
+
+.header-icon-container {
+  background: linear-gradient(135deg, var(--sys-color-gradient-primary), var(--sys-color-gradient-tertiary));
+  border-radius: var(--sys-size-4);
+  height: 36px;
+  width: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.close-button {
+  align-self: flex-start;
 }
