RPP: Right-align most insight table headers
Bug:344550388
Change-Id: I364f5d14a974ec7ccfe9a291d09b31cb735edcd1
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5840803
Commit-Queue: Adriana Ixba <aixba@chromium.org>
Auto-Submit: Paul Irish <paulirish@chromium.org>
Reviewed-by: Adriana Ixba <aixba@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -91,6 +91,10 @@
 .dl-title {
   font-weight: bold;
 }
+/* right-align the right-most header cells */
+dd.dl-title {
+  text-align: right;
+}
 
 dd.dl-title {
   text-align: right;
