[RPP] Add ThirdParties insight component card
This displays two tables - one for transfer size (bytes) and the
other for main thread blocking time (ms). Overlays are created for
all non-first-party network requests.

https://i.imgur.com/Ekt4Tif.png

Bug: 352244718
Change-Id: I7c65d2ea2a45d0eee15e3d9500ab35b713fd1878
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5838145
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/timelineFlameChartView.css
+++ b/front_end/panels/timeline/timelineFlameChartView.css
@@ -43,6 +43,10 @@
   &.outline-reason-ERROR {
     border-color: var(--sys-color-error-bright);
   }
+
+  &.outline-reason-INFO {
+    border-color: var(--sys-color-primary);
+  }
 }
 
 .overlay-type-CANDY_STRIPED_TIME_RANGE {
