[ui] Use inherited color for shortcuts of disabled menu items.
Fixed: 364197506
Change-Id: I49a1cbcbaf499ff76c7a2a3db56222b9e5b175a4
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5836873
Commit-Queue: Simon Zünd <szuend@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/softContextMenu.css
+++ b/front_end/ui/legacy/softContextMenu.css
@@ -104,6 +104,7 @@
   text-align: right;
   padding-left: var(--sys-size-6);
 
+  .soft-context-menu-disabled &,
   .soft-context-menu-item-mouse-over & {
     color: inherit;
   }
