Add a setting to opt out of dynamic theming
Screenshot: https://imgur.com/a/ML3eNXt

Bug: 328472696
Change-Id: I2082051db24aa40c052375ad84ee9cb17337d414
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5828827
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/emulation/deviceModeView.css
+++ b/front_end/panels/emulation/deviceModeView.css
@@ -84,8 +84,8 @@
 }
 
 .device-mode-preset-bar {
-  border-left: 2px solid var(--sys-color-on-base-divider);
-  border-right: 2px solid var(--sys-color-on-base-divider);
+  border-left: 2px solid var(--sys-color-divider);
+  border-right: 2px solid var(--sys-color-divider);
   pointer-events: auto;
   text-align: center;
   flex: none;
