--- a/front_end/ui/legacy/filter.css
+++ b/front_end/ui/legacy/filter.css
@@ -113,7 +113,7 @@
 }
 
 .filter-divider {
-  background-color: var(--sys-color-on-base-divider);
+  background-color: var(--sys-color-divider);
   width: 1px;
   margin: 5px 4px;
   height: 16px;
