--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -414,7 +414,7 @@ select.toolbar-item:not(.toolbar-has-dropdown):disabled {
 /* Separator */
 
 .toolbar-divider {
-  background-color: var(--sys-color-on-base-divider);
+  background-color: var(--sys-color-divider);
   width: 1px;
   margin: 5px 4px;
   height: 16px;
