[Freestyler] Fix the hover background color for thinking step header
Fixed: 365060173
Change-Id: I7fb513303708849f62a78a9bf4f34f93ee1267c4
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5842246
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -176,8 +176,17 @@
   width: fit-content;
   background-color: var(--sys-color-surface3);
   border-radius: var(--sys-size-6);
+  position: relative;
 
-  &:not(&[open]):hover {
+  &:not(&[open]):hover::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    border-radius: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    pointer-events: none;
     background-color: var(--sys-color-state-hover-on-subtle);
   }
 
