[Freestyler] Do not render user messages in markdown
Bug: 365068104
Change-Id: Ibdfc7cd272119bc94e3b126fc3dad385a2d64346
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5836896
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -140,6 +140,14 @@
     border-bottom: 0;
   }
 
+  &.query {
+    .message-content {
+      line-height: 18px;
+      white-space: pre;
+      text-wrap: wrap;
+    }
+  }
+
   .message-info {
     display: flex;
     align-items: center;
