[RPP Observations] Improve environment settings section
https://screenshot.googleplex.com/5x2r6NXos9A7UtP

Dynamic info from field data is now hidden behind icons with tooltips.
This has a couple benefits:
- The advice notes are less aggressive, which is good since they are
  not strong requirements.
- The section has less text which is less overwhelming
- The dynamic information is less likely to cause layout shifts

Bug: 362252927, 360379617
Change-Id: I8d1453e7bac4ebac393c3803d4b45fc2cdba7bea
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5835892
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -97,8 +97,14 @@
   margin-bottom: 4px;
 }
 
-.setting-recommendation {
+.device-toolbar-description {
   margin-bottom: 12px;
+  display: flex;
+}
+
+.network-cache-setting {
+  display: inline-block;
+  max-width: max-content;
 }
 
 .throttling-recommendation-value {
@@ -195,10 +201,8 @@
   flex-shrink: 0;
 }
 
-.live-metrics-option {
-  display: block;
-  margin-top: 8px;
-  min-width: 0;
+.field-data-option {
+  margin: 8px 0;
   max-width: 100%;
 }
 
@@ -223,4 +227,18 @@ x-link { /* stylelint-disable-line selector-type-no-unknown */
   margin-top: 10px;
   padding-left: 12px;
   border-left: 1px solid var(--sys-color-divider);
+}
+
+.environment-option {
+  display: flex;
+  align-items: center;
+  margin-top: 8px;
+}
+
+.field-data-hint {
+  margin-left: 6px;
+  vertical-align: bottom;
+  cursor: help;
+  height: 18px;
+  width: 18px;
 }
