[Freestyler] Update feedback from UI
There is still a small delta with the icons but will address it
separably.

Bug: 364564010
Change-Id: I6361e79826a55936c508abd3d784356a6ba79842
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5836894
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/provideFeedback.css
+++ b/front_end/panels/freestyler/components/provideFeedback.css
@@ -17,8 +17,22 @@
 .feedback-form {
   display: flex;
   flex-direction: column;
-  gap: var(--sys-size-4);
+  gap: var(--sys-size-5);
   margin-top: var(--sys-size-4);
+  background-color: var(--sys-color-surface3);
+  padding: var(--sys-size-6);
+  border-radius: var(--sys-shape-corner-medium-small);
+
+  .feedback-input {
+    height: var(--sys-size-11);
+    padding: 0 var(--sys-size-5);
+    background-color: var(--sys-color-surface3);
+  }
+
+  .feedback-input::placeholder {
+    color: var(--sys-color-on-surface-subtle);
+    font: var(--sys-typescale-body4-regular);
+  }
 }
 
 .feedback-header {
@@ -29,6 +43,7 @@
 
 .feedback-title {
   margin: 0;
+  font: var(--sys-typescale-body3-medium);
 }
 
 .feedback-disclaimer {
