Fix the Network > More filters dropdown triangle position
Fixed: 364203206
Change-Id: I0604a7482e241f61a86c346bf594ddac0f51d1b7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5844609
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/filter.css
+++ b/front_end/ui/legacy/filter.css
@@ -154,6 +154,10 @@
   display: flex;
   background-color: transparent;
   color: var(--sys-color-on-surface-subtle);
+
+  .toolbar-dropdown-arrow {
+    top: 1px;
+  }
 }
 
 button.toolbar-item:focus-visible {
