Center Settings > Throttling > Add custom profile checkbox state layers
Screenshot: imgur.com/a/DFNFr3P

Fixed: 363953740
Change-Id: Ic2da40764ed61b4550c42b07d03c3a43aac236f3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5844612
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/mobile_throttling/throttlingSettingsTab.css
+++ b/front_end/panels/mobile_throttling/throttlingSettingsTab.css
@@ -86,9 +86,12 @@
 
 .conditions-edit-row input {
   &[type="checkbox"] {
-    display: block;
     margin: auto;
     top: 6px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   &:not([type="checkbox"]) {
