Fix the stack trace source location font, size and focus
Screenshot: imgur.com/a/2RyVm2i

Fixed: 362452426
Change-Id: I1deead615d2f2bc288771d9fbaea19d9739f8cb0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5845029
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/application/components/stackTraceRow.css
+++ b/front_end/panels/application/components/stackTraceRow.css
@@ -39,4 +39,12 @@
   outline-offset: 2px;
   border: none;
   background: none;
+  font-family: inherit;
+  font-size: var(--sys-size-6);
+
+  &:focus-visible {
+    outline: 2px solid var(--sys-color-state-focus-ring);
+    outline-offset: 0;
+    border-radius: var(--sys-shape-corner-extra-small);
+  }
 }
