[Freestyler] Update cursor to be default for thinking step headers
Bug: none
Change-Id: I317ba18cb9abcb4c5909d941dd3f23c560ca6ac8
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5845036
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -216,6 +216,7 @@
     grid-template-columns: auto 1fr auto;
     padding: var(--sys-size-3);
     line-height: var(--sys-size-9);
+    cursor: default;
 
     .title {
       text-overflow: ellipsis;
