[Freestyler] Add CodeBlock to accept a heading and add heading in Freestyler
In addition to that:
* Updated the border radiuses in CodeBlock to match better with the design, there can still be some adjustments about them later.
* Added max-height option to the `code` parts so that the
`data returned` part has a max height and is scrollable.
* Separated disclaimer from the code itself.

I'll create a separate bug for "Open in new tab" bug as it is not
one of our requirements right now.

For testing this out visually, after building you should:
* Try running Freestyler and see that the headings are shown correctly & disclaimer is separated.
* Run components-server and checkout `CodeBlock` example inside `MarkdownView` examples for all states of it.

Fixed: 365068111, 357563071
Change-Id: I9ca1df7e07cd8c393ad9225993840ba8d07c0110
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5845034
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -318,20 +318,15 @@
 }
 
 .action-result {
-  margin: 8px 0;
+  /* devtools-code-block adds `margin-top: 8px` however we want the margin between `.action-result` and `.js-code-output` to be 2px
+  that's why we use -6px here. */
+  margin-bottom: -6px;
 }
 
 .js-code-output {
-  margin-top: -8px;
-  white-space: pre;
-  max-width: 100%;
-  overflow: auto;
-  scrollbar-width: none;
-  padding: 4px 6px;
-  background-color: var(--sys-color-surface3);
-  color: var(--sys-color-on-surface);
-  font-size: 10px;
-  font-family: var(--source-code-font-family);
+  devtools-code-block {
+    --max-code-height: 50px;
+  }
 }
 
 .error-step {
