[RPP] Add 'user-created' icon to the Label Annotation
Wrap the input field in another div and add a 'user created' icon next to it.

Screenshot: https://screenshot.googleplex.com/4NuHA4SFDdGQ5sP

Bug: 360096163
Change-Id: I833aae7b6a0191c08d6a5f553b38c4a305b58eba
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5845408
Auto-Submit: Alina Varkki <alinavarkki@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
+++ b/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
@@ -16,7 +16,7 @@
   align-items: center;
 }
 
-.label-box {
+.input-field {
   pointer-events: auto;
   background-color: var(--sys-color-token-variable);
   border-radius: var(--sys-shape-corner-extra-small);
@@ -27,7 +27,7 @@
   font-weight: var(--ref-typeface-weight-medium);
 }
 
-.label-box:focus {
+.input-field:focus {
   background-color: var(--color-selected-option);
   color: var(--sys-color-token-variable);
 }
@@ -39,4 +39,14 @@
 .entry-highlight-wrapper {
   box-sizing: border-box;
   border: 2px solid var(--sys-color-on-surface);
+}
+
+.label-box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.user-created-icon {
+  margin: var(--sys-size-3);
 }
