Adapt animations for new console insights flow
Instead of animating `max-height`, where some approximate `max-height`
value is needed for a proper animation, switch to animating
`grid-template-rows`.

Screencast: https://imgur.com/a/47fAFjF

Bug: b/350668580
Change-Id: I170375015a46d06e944a5a70cc61a255ee517744
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5849969
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -11,61 +11,9 @@
 }
 
 :host {
-  --max-height: 2000px;
-  --loading-max-height: 140px;
-
   font-family: var(--default-font-family);
   font-size: inherit;
   display: block;
-  overflow: hidden;
-  max-height: 0;
-}
-
-:host-context(.opening) {
-  animation: expand-to-loading var(--sys-motion-duration-medium2) var(--sys-motion-easing-emphasized);
-  animation-fill-mode: forwards;
-}
-
-:host-context(.loaded) {
-  animation: expand-to-full var(--sys-motion-duration-medium2) var(--sys-motion-easing-emphasized);
-  animation-fill-mode: forwards;
-}
-
-:host-context(.closing) {
-  animation: collapse var(--sys-motion-duration-medium2) var(--sys-motion-easing-emphasized);
-  animation-fill-mode: forwards;
-}
-
-@keyframes expand-to-loading {
-  from {
-    max-height: 0;
-  }
-
-  to {
-    max-height: var(--loading-max-height);
-  }
-}
-
-@keyframes expand-to-full {
-  from {
-    max-height: var(--actual-height, var(--loading-max-height));
-  }
-
-  to {
-    max-height: var(--max-height);
-  }
-}
-
-@keyframes collapse {
-  from {
-    max-height: var(--actual-height, var(--max-height));
-  }
-
-  to {
-    max-height: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-  }
 }
 
 .wrapper {
@@ -74,6 +22,38 @@
   border-radius: 16px;
   /* stylelint-disable-next-line property-no-unknown */
   container-type: inline-size;
+  display: grid;
+  animation: expand var(--sys-motion-duration-medium2) var(--sys-motion-easing-emphasized) forwards;
+}
+
+:host-context(.closing) .wrapper {
+  animation: collapse var(--sys-motion-duration-medium2) var(--sys-motion-easing-emphasized) forwards;
+}
+
+@keyframes expand {
+  from {
+    grid-template-rows: 0fr;
+  }
+
+  to {
+    grid-template-rows: 1fr;
+  }
+}
+
+@keyframes collapse {
+  from {
+    grid-template-rows: 1fr;
+  }
+
+  to {
+    grid-template-rows: 0fr;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
+
+.animation-wrapper {
+  overflow: hidden;
 }
 
 .wrapper.top {
