[settings] Add learn more link for HAR with sensitive data option.
This CL introduces an optional `LearnMore` object for settings, which
when supplied adds a (?) link to documentation with a tooltip that
explains the feature (basically replicating what we already do for
experiments).

Bug: 361717594
Change-Id: I515f33434ec714031e76f50c455c89b6b3257574
Doc: https://goo.gle/devtools-har-exclude-cookies-design
Screenshot: https://imgur.com/KgvPwTx.png
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5850449
Commit-Queue: Yang Guo <yangguo@chromium.org>
Reviewed-by: Yang Guo <yangguo@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/components/settings/settingCheckbox.css
+++ b/front_end/ui/components/settings/settingCheckbox.css
@@ -34,3 +34,12 @@ p {
   width: 16px;
   height: 16px;
 }
+
+#learn-more {
+  margin-left: 2px;
+
+  & > .link-icon {
+    width: 16px;
+    height: 16px;
+  }
+}
