[Freestyler] Update UI for SideEffect
Changes the icon to match the design, add support for canaled runs.

Bug: 365535423
Change-Id: Ibcb874f183d9679e01e54f64a2a331d84751d190
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5845418
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -206,8 +206,9 @@
       color: var(--sys-color-blue-bright);
     }
 
-    &.paused {
-      color: var(--sys-color-on-surface);
+    &.paused,
+    &.canceled {
+      color: var(--sys-color-on-surface-subtle);
     }
   }
 
@@ -217,11 +218,19 @@
     padding: var(--sys-size-3);
     line-height: var(--sys-size-9);
     cursor: default;
+    gap: var(--sys-size-3);
+    justify-content: center;
+    align-items: center;
 
     .title {
       text-overflow: ellipsis;
       white-space: nowrap;
       overflow: hidden;
+      font: var(--sys-typescale-body4-regular);
+
+      .paused {
+        font: var(--sys-typescale-body4-bold);
+      }
     }
   }
 
