[settings] Use correct size tokens.
Follow up fix for https://crrev.com/c/5850449 to use the correct size
tokens.

Bug: 361717594
Change-Id: I55895b8cb322a083d718077aa56f0fd38f46ccde
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5850458
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/components/settings/settingCheckbox.css
+++ b/front_end/ui/components/settings/settingCheckbox.css
@@ -36,10 +36,10 @@ p {
 }
 
 #learn-more {
-  margin-left: 2px;
+  margin-left: var(--sys-size-2);
 
   & > .link-icon {
-    width: 16px;
-    height: 16px;
+    width: var(--sys-size-8);
+    height: var(--sys-size-8);
   }
 }
